--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "log4js": "^6.9.1",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.2",
     "pg-promise": "^11.8.0",
     "uuid": "^10.0.0"
   }
